# keyso

./: pyproject.toml  readme.md
src/keyso/: __init__.py
tests/: test_flat_type.py  test_kvs.py  test_kvs_set.py
