[tool.poetry]
name = "keyso"
version = "0.1.0"
description = "keyso : an algebra of sets for key-values"

authors = [
  "Jayesh Badwaik <j.badwaik@fz-juelich.de>",
]

readme = "readme.md"

packages  = [
{ include = "keyso", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-datadir = "*"
